tests/baselines/reference/noUnusedLocals_selfReference_skipsBlockLocations.errors.txt
noUnusedLocals_selfReference_skipsBlockLocations.ts(2,14): error TS6133: 'f' is declared but its value is never read.
noUnusedLocals_selfReference_skipsBlockLocations.ts(8,22): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
noUnusedLocals_selfReference_skipsBlockLocations.ts(8,22): error TS6133: 'g' is declared but its value is never read.
noUnusedLocals_selfReference_skipsBlockLocations.ts(12,22): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
noUnusedLocals_selfReference_skipsBlockLocations.ts(12,22): error TS6133: 'h' is declared but its value is never read.


==== noUnusedLocals_selfReference_skipsBlockLocations.ts (5 errors) ====
    namespace n {
        function f() {
                 ~
!!! error TS6133: 'f' is declared but its value is never read.
            f;
        }
    
        switch (0) {
            case 0:
                function g() {
                         ~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
                         ~
!!! error TS6133: 'g' is declared but its value is never read.
                    g;
                }
            default:
                function h() {
                         ~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
                         ~
!!! error TS6133: 'h' is declared but its value is never read.
                    h;
                }
        }
    }
    